# rust-chain

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  docker-compose.yml
.codex/: config.toml
.trellis/: .template-hashes.json
migrations/: 0001_users_auth.sql  0002_admin_agent_rbac.sql  0003_assets_wallet_ledger_locks.sql  0004_market_pairs_strategy.sql  0005_spot_orders_trades.sql  0006_new_coin_lifecycle.sql  0007_flash_convert.sql  0008_events_risk_audit.sql  0009_event_inbox_retry_count.sql  0010_event_inbox_next_retry_at.sql  0011_spot_trade_idempotency_key.sql  0012_event_inbox_payload_json.sql  0013_event_inbox_missing_payload_processing_dead_letter.sql  0014_new_coin_post_listing_purchase_config.sql  0015_spot_order_reservations.sql  0016_spot_order_reservation_backfill.sql  0017_spot_order_reservation_asset_backfill.sql  0018_spot_order_reservation_amount_backfill.sql  0019_spot_order_reservation_total_backfill.sql  0020_spot_order_reservation_ledger_backfill.sql  0021_seconds_contracts.sql  0022_margin_trading.sql  0023_earn_products.sql  0024_seconds_contract_entry_price.sql  0025_seconds_contract_settlement_retry_at.sql  0026_margin_liquidation_fields.sql  0027_margin_liquidation_records.sql  0028_agent_commission_source_id.sql  0029_spot_order_request_reference_price.sql  0030_spot_order_request_price.sql  0031_margin_borrow_interest.sql  0032_margin_borrow_interest_backfill.sql  0033_margin_liquidation_interest_amount.sql  0034_market_feed_admin_config.sql  0035_margin_modes_and_leverage_levels.sql  0036_earn_product_content_i18n.sql  0037_user_auth_security.sql  0038_upload_storage_config.sql  0039_upload_object_url_text.sql  0040_agent_commission_rule_updated_at.sql  (+45 more)
mobile/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/.cargo/: config.toml
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: lib.rs  main.rs
pc/: AGENT.md  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  task.md  vite.config.js  vite.config.ts  接口.md
src/: architecture.rs  config.rs  error.rs  (+5 more)
(+902 files in other folders)
