[package]
name = "hippo-mobile"
version = "0.1.0"
description = "Hippo Exchange mobile client"
authors = ["Hippo Exchange"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hippo_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

